Fix two scrollbars on popover overflow

--- a/src/smart-components/group/groups.scss
+++ b/src/smart-components/group/groups.scss
@@ -14,7 +14,3 @@
 .pf-c-popover {
   min-width: 350px;
 }
-
-body {
-  overflow: hidden
-}
